--- a/TriforceApp/res/layout/view_db.xml
+++ b/TriforceApp/res/layout/view_db.xml
@@ -10,8 +10,9 @@
 
     <Button
         android:id="@+id/exitViewDB"
-        android:layout_width="match_parent"
+        android:layout_width="280dp"
         android:layout_height="wrap_content"
+        android:layout_gravity="center_horizontal"
         android:text="@string/exitViewDB" />
 
     <TableLayout
