--- a/TriforceApp/res/layout/main.xml
+++ b/TriforceApp/res/layout/main.xml
@@ -14,7 +14,9 @@
         android:layout_height="wrap_content"
         android:layout_gravity="center_horizontal"
         android:text="@string/titleLogin"
-        android:textAppearance="?android:attr/textAppearanceLarge" />
+        android:textAppearance="?android:attr/textAppearanceLarge"
+        android:textStyle="bold"
+        android:typeface="serif" />
 
     <!-- logo -->
 
@@ -29,7 +31,7 @@
     <!-- Username tag above the text field where the user inputs username -->
 
     <TableRow
-        android:layout_width="225dp"
+        android:layout_width="280dp"
         android:layout_height="wrap_content"
         android:layout_gravity="center_horizontal" >
 
@@ -38,11 +40,12 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="@string/username"
-            android:textAppearance="?android:attr/textAppearanceSmall" />
+            android:textAppearance="?android:attr/textAppearanceSmall"
+            android:textStyle="bold" />
     </TableRow>
 
     <TableRow
-        android:layout_width="225dp"
+        android:layout_width="280dp"
         android:layout_height="wrap_content"
         android:layout_gravity="center_horizontal" >
 
@@ -55,7 +58,7 @@
     <!-- Password tag above the text field where the user inputs password -->
 
     <TableRow
-        android:layout_width="225dp"
+        android:layout_width="280dp"
         android:layout_height="wrap_content"
         android:layout_gravity="center_horizontal" >
 
@@ -64,11 +67,12 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="@string/password"
-            android:textAppearance="?android:attr/textAppearanceSmall" />
+            android:textAppearance="?android:attr/textAppearanceSmall"
+            android:textStyle="bold" />
     </TableRow>
 
     <TableRow
-        android:layout_width="225dp"
+        android:layout_width="280dp"
         android:layout_height="wrap_content"
         android:layout_gravity="center_horizontal" >
 
@@ -81,17 +85,9 @@
     <!-- Login button -->
 
     <TableRow
-        android:layout_width="225dp"
+        android:layout_width="280dp"
         android:layout_height="wrap_content"
         android:layout_gravity="center_horizontal" >
-
-        <Button
-            android:id="@+id/GotoRegisterButton"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_weight="1"
-            android:onClick="registerButton"
-            android:text="@string/register" />
 
         <Button
             android:id="@+id/loginButton"
@@ -100,11 +96,19 @@
             android:layout_weight="1"
             android:onClick="loginButton"
             android:text="@string/enter" />
+
+        <Button
+            android:id="@+id/GotoRegisterButton"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:onClick="registerButton"
+            android:text="@string/register" />
     </TableRow>
     <!-- Register Button and Button to view Database -->
 
     <TableRow
-        android:layout_width="225dp"
+        android:layout_width="280dp"
         android:layout_height="wrap_content"
         android:layout_gravity="center_horizontal" >
 
