--- a/TriforceApp/res/layout/register.xml
+++ b/TriforceApp/res/layout/register.xml
@@ -14,7 +14,9 @@
         android:layout_height="wrap_content"
         android:layout_gravity="center_horizontal"
         android:text="@string/titleRegistration"
-        android:textAppearance="?android:attr/textAppearanceLarge" />
+        android:textAppearance="?android:attr/textAppearanceLarge"
+        android:textStyle="bold"
+        android:typeface="serif" />
 
     <!-- Username tag above the text field where the user inputs a new username -->
 
@@ -39,7 +41,6 @@
             android:layout_width="15dp"
             android:layout_height="15dp"
             android:src="@android:drawable/ic_delete" />
-
     </TableRow>
 
     <TableRow
@@ -66,7 +67,7 @@
             android:layout_height="wrap_content"
             android:text="@string/password"
             android:textAppearance="?android:attr/textAppearanceSmall" />
-        
+
         <ImageView
             android:id="@+id/passwordError"
             android:layout_width="15dp"
@@ -98,6 +99,7 @@
             android:layout_height="wrap_content"
             android:text="@string/name"
             android:textAppearance="?android:attr/textAppearanceSmall" />
+
         <ImageView
             android:id="@+id/nameError"
             android:layout_width="15dp"
@@ -129,6 +131,7 @@
             android:layout_height="wrap_content"
             android:text="@string/email"
             android:textAppearance="?android:attr/textAppearanceSmall" />
+
         <ImageView
             android:id="@+id/emailError"
             android:layout_width="15dp"
