--- a/TriforceApp/res/layout/user_tasklist.xml
+++ b/TriforceApp/res/layout/user_tasklist.xml
@@ -15,70 +15,29 @@
         android:layout_height="wrap_content"
         android:layout_gravity="center_horizontal"
         android:text="@string/titleTaskList"
-        android:textAppearance="?android:attr/textAppearanceLarge" />
-
-    <TableLayout
-        android:id="@+id/tableLayout1"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content" >
-
-        <TableRow
-            android:id="@+id/tableRowButtons"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content" >
-
-            <!-- Buttons for New, Edit, and Delete task and logout -->
-
-            <ImageButton
-                android:id="@+id/newTaskButton"
-                android:layout_width="0dp"
-                android:layout_height="fill_parent"
-                android:layout_weight="1"
-                android:contentDescription="@string/newTask"
-                android:src="@android:drawable/ic_menu_add" />
-
-            <ImageButton
-                android:id="@+id/showLocationsButton"
-                android:layout_width="0dp"
-                android:layout_height="fill_parent"
-                android:layout_weight="1"
-                android:contentDescription="@string/showLocations"
-                android:src="@android:drawable/ic_menu_compass" />
-
-            <Button
-                android:id="@+id/logoutButton"
-                android:layout_width="0dp"
-                android:layout_height="fill_parent"
-                android:layout_weight="1"
-                android:text="@string/logoutMain" />
-        </TableRow>
-
-        <TableRow
-            android:id="@+id/tableRowFilterTasks"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content" >
-
-            <!-- Spinner for filtering tasks and button to show locations -->
-
-            <Button
-                android:id="@+id/filterTasksButton"
-                android:layout_width="0dp"
-                android:layout_height="fill_parent"
-                android:layout_weight="1"
-                android:text="@string/filterTasks" />
-        </TableRow>
-    </TableLayout>
+        android:textAppearance="?android:attr/textAppearanceLarge"
+        android:textStyle="bold"
+        android:typeface="serif" />
 
     <!-- View that displays the tasks -->
 
+    <Space
+        android:layout_width="match_parent"
+        android:layout_height="15dp" />
+
     <ListView
         android:id="@android:id/list"
-        android:layout_width="match_parent"
+        android:layout_width="280dp"
         android:layout_height="0dp"
+        android:layout_gravity="center_horizontal"
         android:layout_weight="1"
         android:background="#000000"
         android:clickable="true"
         android:drawSelectorOnTop="false" >
     </ListView>
+
+    <Space
+        android:layout_width="match_parent"
+        android:layout_height="15dp" />
 
 </LinearLayout>
