made separators for task list a brighter color
git-svn-id: https://team-triforce-36-project.googlecode.com/svn/trunk@246 4b79e4dc-a6ce-1459-8c0c-0c5eed390bd5

--- a/TriforceApp/res/layout/register.xml
+++ b/TriforceApp/res/layout/register.xml
@@ -9,7 +9,7 @@
     <!-- title of register screen -->
 
     <TextView
-        android:id="@+id/titeRegistration"
+        android:id="@+id/titleRegistration"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="center_horizontal"
