--- a/TriforceApp/res/layout/user_tasklist.xml
+++ b/TriforceApp/res/layout/user_tasklist.xml
@@ -33,6 +33,8 @@
         android:layout_weight="1"
         android:background="#000000"
         android:clickable="true"
+        android:divider="#AAAAAA"
+        android:dividerHeight="1dp"
         android:drawSelectorOnTop="false" >
     </ListView>
 
