updated the layout to be more aesthetically pleasing. can now be told what's being filtered. spacing is better all around.
git-svn-id: https://team-triforce-36-project.googlecode.com/svn/trunk@247 4b79e4dc-a6ce-1459-8c0c-0c5eed390bd5

--- a/TriforceApp/res/layout/main.xml
+++ b/TriforceApp/res/layout/main.xml
@@ -18,6 +18,12 @@
         android:textStyle="bold"
         android:typeface="serif" />
 
+    <View
+        android:id="@+id/divider"
+        android:layout_width="fill_parent"
+        android:layout_height="1dp"
+        android:background="@drawable/black_white_gradient" />
+
     <!-- logo -->
 
     <ImageView
