--- a/TriforceApp/res/layout/edit_task_page.xml
+++ b/TriforceApp/res/layout/edit_task_page.xml
@@ -22,6 +22,12 @@
             android:textStyle="bold"
             android:typeface="serif" />
 
+        <View
+            android:id="@+id/divider"
+            android:layout_width="fill_parent"
+            android:layout_height="1dp"
+            android:background="@drawable/black_white_gradient" />
+
         <!-- Tag asking for Task Name and its edit form -->
 
         <TableRow
